<resources>
    <string name="app_name">PetitChef</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mail_adress">Email address</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="signup_confirm_button">Let\'s Cook !</string>
    <string name="signup_switch_to_signin"><![CDATA[<b><font color=#FFFFFF>Already have an account ? Log in </b><b><font color=#4A90E2>here</b>]]></string>
    <string name="signin_switch_to_signup"><![CDATA[<b><font color=#FFFFFF>Don\'t have an account ? Sign up </b><b><font color=#4A90E2>here</b>]]></string>
    <string name="sign_in_facebook">Login with Facebook</string>
    <string name="sign_up_petitchef">Sign Up</string>
    <string name="sign_in_petitchef">Login with PetitChef</string>
    <string name="error_field_empty">Please complete all fields before trying to sign in.</string>
    <string name="stock_title_tab">Stock</string>
    <string name="recipe_title_tab">Recipes</string>
    <string name="scan_title_tab">Scan</string>
    <string name="profile_title_tab">Profile</string>
    <string name="list_title_tab">List</string>
    <string name="error_password_or_username">Wrong password or username.</string>
    <string name="token_shared_string">apitoken</string>
    <string name="lorme_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec interdum urna. Sed pharetra nunc vel commodo sagittis. Phasellus molestie ac urna in facilisis. Etiam id dolor at leo volutpat dictum et in urna. Proin lobortis neque quis risus varius gravida</string>
    <string name="title_description">Description</string>
</resources>
