<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <com.petitchef.petitchef.views.customviews.CustomEditText
        android:id="@+id/username_sign_up"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_text_edit_background"
        android:hint="@string/username"
        android:maxLines="1"
        android:inputType="text"
        android:paddingLeft="5dp"/>

    <com.petitchef.petitchef.views.customviews.CustomEditText
        android:id="@+id/mail_address_sign_up"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_text_edit_background"
        android:hint="@string/mail_adress"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        />

    <com.petitchef.petitchef.views.customviews.CustomEditText
        android:id="@+id/password_sign_up"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_text_edit_background"
        android:hint="@string/password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:paddingLeft="5dp"/>

    <com.petitchef.petitchef.views.customviews.CustomButton
        android:id="@+id/button_confirm_sign_up"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_text_edit_background"
        android:text="@string/signup_confirm_button"
        android:textSize="18sp"
        />

    <com.petitchef.petitchef.views.customviews.CustomTextView
        android:id="@+id/switch_to_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="@color/flagWhite"
        android:text="@string/signup_switch_to_signin"/>

</LinearLayout>